samples/_failures_safe/1761603216_a7a825_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37d9f91c.c: In function ‘main’:
./samples/SAFE/__tmp_37d9f91c.c:170:9: error: expected expression at end of input
  170 |         if (
      |         ^~
./samples/SAFE/__tmp_37d9f91c.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37d9f91c.c:170:9: error: expected declaration or statement at end of input
